# minishell

./: 1  3  CMakeLists.txt  Makefile  README.md  a  cases.txt  file2  minishell  test.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
includes/: errors.h  minishell.h
libs/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+7 more)
minishell.dSYM/Contents/Resources/DWARF/: minishell
src/: 2d_array_utilc.c  bin_folders.c  builtins.c  builtins2.c  builtins_utils.c  check_tokens.c  check_tokens_utils.c  envp.c  error.c  exec_bin.c  exec_tree.c  free.c  main1.c  make_tokens.c  make_tokens_i.c  make_tree.c  make_tree_utils.c  minishell.c  parser.c  pipe_n_fork.c  preprocess_str.c  print.c  redirects.c  signals.c  singltones.c  utils.c  utils2.c
